# turing_machine_solver

./: .travis.yml  CMakeLists.txt  README.md  infra_infos.txt
include/: ask.h  candidate.h  checker_base.h  checker_func.h  checker_if.h  potential_checkers.h  solver.h
src/: main.cpp
tests/difficult_4_chk_1/: test.info
tests/easy_4_chck_1/: test.info
